Clean up examples for real
